--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "composer/installers": "^1.3",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/commerce": "^2.16",
+        "drupal/commerce_product_tax": "^1.0@RC",
         "drupal/core": "^8.6.0",
         "lemberg/draft": "^1.2.1",
         "symfony/filesystem": "^3.4",
@@ -82,9 +84,6 @@
             ]
         },
         "patches": {
-            "drupal/core": {
-                "Installation profiles do not support project:module format for dependencies": "https://www.drupal.org/files/issues/2018-09-10/drupal-support_project_module_format_dependencies-2855026-49.patch"
-            }
         },
         "enable-patching": true
     }
