--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -9,4 +9,8 @@ label: 'Authenticated user'
 weight: 1
 is_admin: false
 permissions:
+  - 'access checkout'
+  - 'access content'
+  - 'manage own commerce_payment_method'
   - 'view commerce_product'
+  - 'view own commerce_order'
