Add composer script for site install & update README

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,12 @@
             "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
 
             "Lemberg\\Draft\\Template\\DrupalProject::localSetup"
+        ],
+        "si": [
+            "drush si -y",
+            "drush config-set \"system.site\" uuid 902d1300-7276-46f1-8608-7fc30b57e39a",
+            "drush cim -y",
+            "drush upwd admin admin"
         ]
     },
     "config": {
