--- a/config/default/core.entity_view_display.commerce_store.online.default.yml
+++ b/config/default/core.entity_view_display.commerce_store.online.default.yml
@@ -26,5 +26,7 @@ hidden:
   is_default: true
   mail: true
   name: true
+  prices_include_tax: true
+  tax_registrations: true
   timezone: true
   uid: true
