--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,29 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "drupal/coder": "^8.2",
         "drupal/console": "^1.2.0",
         "drupal/devel": "^1.2",
         "drupal/reroute_email": "^1.0",
         "drupal/stage_file_proxy": "^1.0",
         "drush/drush": "^9",
-        "lemberg/draft-environment": "^3"
+        "lemberg/draft-environment": "^3",
+        "behat/mink": "1.7.x-dev",
+        "behat/mink-goutte-driver": "^1.2",
+        "behat/mink-selenium2-driver": "1.3.x-dev",
+        "drupal/coder": "^8.3.2",
+        "jcalderonzumba/gastonjs": "^1.0.2",
+        "jcalderonzumba/mink-phantomjs-driver": "^0.3.1",
+        "mikey179/vfsstream": "^1.6.8",
+        "phpunit/phpunit": "^6.5 || ^7",
+        "phpspec/prophecy": "^1.7",
+        "symfony/css-selector": "^3.4.0",
+        "symfony/phpunit-bridge": "^3.4.3",
+        "symfony/debug": "^3.4.0",
+        "justinrainbow/json-schema": "^5.2",
+        "symfony/filesystem": "~3.4.0",
+        "symfony/finder": "~3.4.0",
+        "symfony/lock": "~3.4.0"
+
     },
     "require": {
         "composer/installers": "^1.3",
@@ -24,6 +40,7 @@
         "drupal/layout_builder_restrictions": "^2.5",
         "drupal/single_row_layouts": "1.x-dev",
         "lemberg/draft": "^1.2.1",
+        "symfony/browser-kit": "^3.4.0",
         "symfony/filesystem": "^3.4",
         "symfony/yaml": "^3.4",
         "wikimedia/composer-merge-plugin": "^1.4"
