--- a/vm-settings.yml
+++ b/vm-settings.yml
@@ -27,6 +27,9 @@ vagrant:
   synced_folder_options:
     type: nfs
     create: true
+  # Disable automatic update checking be setting this option to false.
+  # See https://www.vagrantup.com/docs/boxes/versioning.html#automatic-update-checking
+  box_check_update: false
 
 # VirtualBox configuration.
 #
@@ -60,6 +63,9 @@ virtualbox:
   # CPU execution cap (in %). Lower this value if host machine has single core
   # CPU.
   cpuexecutioncap: 100
+  # VirtualBox disk size (added by vagrant-disksize plugin).
+  # See https://github.com/sprotheroe/vagrant-disksize
+  disk_size: 10GB
 
 # Ansible local configuration.
 ansible:
@@ -95,7 +101,7 @@ draft_features:
 
 ssh_default_directory: '{{ vagrant.base_directory }}'
 
-# Role: oefenweb.swapfile @ v2.0.24
+# Role: oefenweb.swapfile @ v2.0.26
 
 # Set swap file size.
 swapfile_size: 2GB
@@ -119,7 +125,7 @@ apache2_document_root: docroot
 # Log level to use
 apache2_log_level: error
 
-# Role: geerlingguy.mysql @ 2.9.5
+# Role: geerlingguy.mysql @ 3.1.0
 
 # Set this to the user ansible is logging in as - should have root
 # or sudo access
@@ -152,6 +158,11 @@ mysql_daemon: mysql
 mysql_packages:
   - mysql-common
   - mysql-server
+
+# If you need to explicitly set the MySQL Python package, you can set it here. If not set, it will default to `python-mysqldb` for Python 2 and `python3-mysqldb` for Python 3.
+# mysql_python_package_debian: ''
+
+# MySQL connection settings.
 mysql_port: '3306'
 mysql_bind_address: 0.0.0.0
 mysql_skip_name_resolve: false
@@ -167,6 +178,8 @@ mysql_log_file_group: adm
 mysql_slow_query_log_enabled: false
 mysql_slow_query_time: '2'
 mysql_slow_query_log_file: /var/log/mysql/mysql-slow.log
+
+# Memory settings (default values optimized ~512MB RAM).
 mysql_key_buffer_size: 256M
 mysql_max_allowed_packet: 64M
 mysql_table_open_cache: '256'
@@ -183,11 +196,17 @@ mysql_tmp_table_size: 16M
 mysql_max_heap_table_size: 16M
 mysql_group_concat_max_len: '1024'
 mysql_join_buffer_size: '262144'
+
+# Other settings.
 mysql_lower_case_table_names: '0'
 mysql_wait_timeout: '28800'
 mysql_event_scheduler_state: 'OFF'
+
+# InnoDB settings.
 mysql_innodb_file_per_table: '1'
+# Set .._buffer_pool_size up to 80% of RAM but beware of setting too high.
 mysql_innodb_buffer_pool_size: 256M
+# Set .._log_file_size to 25% of buffer pool size.
 mysql_innodb_log_file_size: 64M
 mysql_innodb_log_buffer_size: 8M
 mysql_innodb_flush_log_at_trx_commit: '1'
@@ -197,7 +216,11 @@ mysql_innodb_lock_wait_timeout: '50'
 mysql_supports_innodb_large_prefix: true
 mysql_innodb_large_prefix: '1'
 mysql_innodb_file_format: barracuda
+
+# mysqldump settings.
 mysql_mysqldump_max_allowed_packet: 64M
+
+# Logging settings.
 mysql_log: ''
 mysql_log_error: /var/log/mysql/mysql.err
 mysql_syslog_tag: mysql
@@ -219,6 +242,8 @@ mysql_users:
     name: drupal
     password: drupal
     priv: 'drupal.*:ALL'
+
+# Replication settings (replication is only enabled if master/user have values).
 mysql_server_id: '1'
 mysql_max_binlog_size: 100M
 mysql_binlog_format: ROW
@@ -293,7 +318,7 @@ composer_keep_updated: true
 # PHP executable name.
 composer_php_executable: php
 
-# Role: T2L.java @ 1.2.0
+# Role: T2L.java @ 1.3.0
 
 # Open JDK version(s) and package type (jre or jdk).
 # Currently supported versions are 6-13 (however not every Java version is
@@ -313,13 +338,11 @@ java_default_alternative:
   provider: openjdk
   version: 8
 
-# Role: T2L.solr @ 2.1.0
+# Role: T2L.solr @ 2.2.0
 
 # Solr user and group. Defaults to solr:solr.
 solr_user: solr
 solr_group: '{{ solr_user }}'
-
-# Solr version to install. Minimum supported version is 5.0.0.
 solr_version: 7.7.2
 
 # Port Solr should bind to.
