Update modules & add new one

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "drupal/commerce_product_tax": "^1.0@RC",
         "drupal/core": "^8.7.11",
         "drupal/layout_builder_restrictions": "^2.5",
+        "drupal/physical": "^1.1",
         "drupal/single_row_layouts": "1.x-dev",
         "lemberg/draft": "^1.2.1",
         "symfony/browser-kit": "^3.4.0",
