--- a/config/default/core.entity_view_display.node.static_page.default.yml
+++ b/config/default/core.entity_view_display.node.static_page.default.yml
@@ -16,13 +16,9 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 0
     settings: {  }
     third_party_settings: {  }
     region: content
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  links: true
