--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -26,6 +26,7 @@ module:
   contextual: 0
   datetime: 0
   datetime_range: 0
+  draft_content: 0
   dynamic_page_cache: 0
   editor: 0
   entity: 0
