--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,9 @@
         "composer/installers": "^1.3",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
-        "drupal/commerce": "^2.16",
+        "drupal/commerce": "^2.17",
         "drupal/commerce_product_tax": "^1.0@RC",
+        "drupal/commerce_shipping": "^2.0@RC",
         "drupal/core": "^8.7.11",
         "drupal/layout_builder_restrictions": "^2.5",
         "drupal/physical": "^1.1",
@@ -66,7 +67,7 @@
             "Lemberg\\Draft\\Template\\DrupalProject::localSetup"
         ],
         "build": [
-            "composer install --dev",
+            "composer install",
             "drush si -y",
             "drush config-set \"system.site\" uuid 902d1300-7276-46f1-8608-7fc30b57e39a",
             "drush cim -y",
