--- a/config/default/field.field.profile.customer.address.yml
+++ b/config/default/field.field.profile.customer.address.yml
@@ -14,25 +14,14 @@ field_name: address
 entity_type: profile
 bundle: customer
 label: Address
-description: ''
+description: 'Help customer'
 required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   available_countries: {  }
-  fields:
-    administrativeArea: administrativeArea
-    locality: locality
-    dependentLocality: dependentLocality
-    postalCode: postalCode
-    sortingCode: sortingCode
-    addressLine1: addressLine1
-    addressLine2: addressLine2
-    organization: organization
-    givenName: givenName
-    additionalName: additionalName
-    familyName: familyName
   langcode_override: ''
   field_overrides: {  }
+  fields: {  }
 field_type: address
