--- a/config/default/commerce_checkout.commerce_checkout_flow.default.yml
+++ b/config/default/commerce_checkout.commerce_checkout_flow.default.yml
@@ -1,7 +1,11 @@
 uuid: 2647f06e-818f-48d0-bfb5-915675c7c0ab
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - commerce_payment
+    - commerce_promotion
+    - commerce_shipping
 _core:
   default_config_hash: D34BCgbJ5zXYuNz6x0XsDBSL22XQjtHLbjJU2mlBvoA
 id: default
@@ -15,20 +19,35 @@ configuration:
       allow_registration: false
       step: login
       weight: 0
+    shipping_information:
+      require_shipping_profile: false
+      step: order_information
+      weight: 3
     contact_information:
       double_entry: true
       step: order_information
       weight: 1
-    billing_information:
+    payment_information:
       step: order_information
       weight: 2
     review:
       step: review
-      weight: 3
+      weight: 4
+    payment_process:
+      capture: true
+      step: payment
+      weight: 5
     completion_message:
       step: complete
-      weight: 4
+      weight: 6
+    completion_register:
+      step: complete
+      weight: 7
     order_summary:
       view: null
       step: _sidebar
-      weight: 5
+      weight: 8
+    coupon_redemption:
+      allow_multiple: false
+      step: _sidebar
+      weight: 9
