--- a/config/default/commerce_order.commerce_order_type.default.yml
+++ b/config/default/commerce_order.commerce_order_type.default.yml
@@ -1,7 +1,20 @@
 uuid: 828982f4-efdd-440d-92f6-c04025d71402
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - commerce_cart
+    - commerce_checkout
+    - commerce_shipping
+third_party_settings:
+  commerce_cart:
+    cart_form_view: commerce_cart_form
+    cart_block_view: commerce_cart_block
+    cart_expiration: {  }
+  commerce_checkout:
+    checkout_flow: default
+  commerce_shipping:
+    shipment_type: default
 _core:
   default_config_hash: bROz7kd1J83kDf06qdZztYFSezi6UrfwftyJo53rNt4
 label: Default
