--- a/config/default/core.entity_form_display.commerce_product_variation.default.default.yml
+++ b/config/default/core.entity_form_display.commerce_product_variation.default.default.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - commerce_product.commerce_product_variation_type.default
+    - field.field.commerce_product_variation.default.weight
   module:
     - commerce_price
+    - physical
 _core:
   default_config_hash: dDLA40Axom_QFA79EWUpe_bWXWE8I_7MijzPkslbVfA
 id: commerce_product_variation.default.default
@@ -38,6 +40,14 @@ content:
     weight: 10
     settings:
       display_label: true
+    third_party_settings: {  }
+    region: content
+  weight:
+    type: physical_measurement_default
+    weight: 91
+    settings:
+      default_unit: ''
+      allow_unit_change: true
     third_party_settings: {  }
     region: content
 hidden:
