--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -74,6 +74,7 @@ theme:
   bartik: 0
   seven: 0
   claro: 0
+  olivero: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
