--- a/config/default/core.entity_form_display.commerce_product.default.default.yml
+++ b/config/default/core.entity_form_display.commerce_product.default.default.yml
@@ -5,8 +5,10 @@ dependencies:
   config:
     - commerce_product.commerce_product_type.default
     - field.field.commerce_product.default.body
+    - field.field.commerce_product.default.field_image
   module:
     - commerce
+    - media_library
     - path
     - text
 _core:
@@ -18,11 +20,12 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 2
+    weight: 3
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
+      show_summary: false
     third_party_settings: {  }
     region: content
   created:
@@ -31,15 +34,22 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_image:
+    type: media_library_widget
+    weight: 2
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+    region: content
   path:
     type: path
-    weight: 7
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     region: content
   status:
     type: boolean_checkbox
-    weight: 8
+    weight: 7
     region: content
     settings:
       display_label: true
