--- a/config/default/core.entity_view_display.commerce_product.default.default.yml
+++ b/config/default/core.entity_view_display.commerce_product.default.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - commerce_product.commerce_product_type.default
     - field.field.commerce_product.default.body
+    - field.field.commerce_product.default.field_image
   module:
     - commerce_product
     - text
@@ -17,27 +18,34 @@ mode: default
 content:
   body:
     type: text_default
-    weight: 0
+    weight: 2
     label: hidden
     settings: {  }
+    third_party_settings: {  }
+    region: content
+  field_image:
+    type: entity_reference_entity_view
+    weight: 0
+    label: hidden
+    settings:
+      view_mode: default
+      link: false
     third_party_settings: {  }
     region: content
   title:
     label: hidden
     type: string
-    weight: -5
+    weight: 1
     region: content
     settings:
       link_to_entity: false
     third_party_settings: {  }
   variations:
     type: commerce_add_to_cart
-    weight: 1
+    weight: 3
     label: hidden
     settings:
-      default_quantity: '1'
       combine: true
-      show_quantity: false
     third_party_settings: {  }
     region: content
 hidden:
