--- a/composer.json
+++ b/composer.json
@@ -6,35 +6,30 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
+        "drupal/coder": "^8.3",
+        "drupal/drupal-extension": "^4",
+        "drupal/stage_file_proxy": "^1.0@beta",
+        "eiriksm/site-schema": "dev-master",
         "lemberg/draft-environment": "^3",
-        "behat/mink": "^1.8",
-        "behat/mink-goutte-driver": "^1.2",
-        "behat/mink-selenium2-driver": "^1.4",
-        "composer/composer": "^1.9.1",
-        "drupal/coder": "^8.3.7",
-        "mikey179/vfsstream": "^1.6.8",
+        "mglaman/phpstan-drupal": "^0.11.10",
+        "phpstan/phpstan-deprecation-rules": "^0.11.2",
+        "phpstan/phpstan-phpunit": "^0.11.2",
         "phpunit/phpunit": "^8.4.1",
-        "phpspec/prophecy": "^1.7",
-        "symfony/css-selector": "^4.4",
-        "symfony/phpunit-bridge": "^4.4",
-        "symfony/error-handler": "^4.4",
-        "justinrainbow/json-schema": "^5.2",
-        "symfony/filesystem": "^4.4",
-        "symfony/finder": "^4.4",
-        "symfony/lock": "^4.4",
-        "symfony/browser-kit": "^4.4",
-        "symfony/dom-crawler": "^4.4 !=4.4.5",
-        "easyrdf/easyrdf": "^0.9"
+        "symfony/phpunit-bridge": "^5.1.4"
     },
     "require": {
         "composer/installers": "^1.3",
         "cweagans/composer-patches": "^1.6",
-        "drupal/admin_toolbar": "^2.2",
-        "drupal/commerce": "^2.17",
-        "drupal/commerce_product_tax": "^1.0@RC",
-        "drupal/core-recommended": "^9.1.0",
+        "drupal/admin_toolbar": "^2.4",
+        "drupal/commerce": "^2.21",
+        "drupal/commerce_paypal": "^1.0@RC",
+        "drupal/core-recommended": "^9.1",
+        "drupal/commerce_pricelist": "^2.1",
+        "drupal/commerce_shipping": "^2.0@RC",
+        "drupal/price_difference_formatter": "^1.2",
         "drush/drush": "^10.2",
-        "wikimedia/composer-merge-plugin": "^1.4"
+        "wikimedia/composer-merge-plugin": "^1.4",
+        "zaporylie/composer-drupal-optimizations": "^1.1"
     },
     "repositories": [
         {
