--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
         "drupal/drupal-extension": "^4",
         "drupal/stage_file_proxy": "^1.0@beta",
         "eiriksm/site-schema": "dev-master",
-        "lemberg/draft-environment": "^3",
         "mglaman/phpstan-drupal": "^0.11.10",
         "phpstan/phpstan-deprecation-rules": "^0.11.2",
         "phpstan/phpstan-phpunit": "^0.11.2",
@@ -18,17 +17,19 @@
         "symfony/phpunit-bridge": "^5.1.4"
     },
     "require": {
-        "composer/installers": "^1.3",
-        "cweagans/composer-patches": "^1.6",
+        "composer/installers": "^1.9",
+        "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^2.4",
         "drupal/commerce": "^2.21",
         "drupal/commerce_paypal": "^1.0@RC",
-        "drupal/core-recommended": "^9.1",
         "drupal/commerce_pricelist": "^2.1",
         "drupal/commerce_shipping": "^2.0@RC",
+        "drupal/core-composer-scaffold": "^9.1",
+        "drupal/core-project-message": "^9.1",
+        "drupal/core-recommended": "^9.1",
         "drupal/price_difference_formatter": "^1.2",
         "drush/drush": "^10.2",
-        "wikimedia/composer-merge-plugin": "^1.4",
+        "lemberg/draft-environment": "3.x.x-dev",
         "zaporylie/composer-drupal-optimizations": "^1.1"
     },
     "repositories": [
@@ -38,18 +39,17 @@
         }
     ],
     "scripts": {
-        "post-root-package-install": [
-            "Lemberg\\Draft\\Template\\DrupalProject::configureIntegrations",
-            "Lemberg\\Draft\\Template\\Cleaner::cleanUp"
+        "pre-install-cmd": [
+            "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
+        ],
+        "pre-update-cmd": [
+            "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
         ],
         "post-install-cmd": [
-            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-            "Lemberg\\Draft\\Template\\DrupalProject::createRequiredFiles",
-            "Lemberg\\Draft\\Template\\DrupalProject::localSetup"
+            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
         ],
         "post-update-cmd": [
-            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-            "Lemberg\\Draft\\Template\\DrupalProject::localSetup"
+            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
         ],
         "build": [
             "composer install",
@@ -64,7 +64,8 @@
     },
     "config": {
         "bin-dir": "bin",
-        "sort-packages": true
+        "sort-packages": true,
+        "discard-changes": true
     },
     "autoload": {
         "psr-4": {
@@ -87,6 +88,9 @@
             "docroot/core": [
                 "type:drupal-core"
             ],
+            "docroot/libraries/{$name}": [
+                "type:drupal-library"
+            ],
             "docroot/modules/contrib/{$name}": [
                 "type:drupal-module"
             ],
@@ -96,8 +100,17 @@
             "docroot/themes/contrib/{$name}": [
                 "type:drupal-theme"
             ],
-            "drush/contrib/{$name}": [
+            "drush/Commands/contrib/{$name}": [
                 "type:drupal-drush"
+            ],
+            "docroot/modules/custom/{$name}": [
+                "type:drupal-custom-module"
+            ],
+            "docroot/profiles/custom/{$name}": [
+                "type:drupal-custom-profile"
+            ],
+            "docroot/themes/custom/{$name}": [
+                "type:drupal-custom-theme"
             ]
         },
         "merge-plugin": {
@@ -108,6 +121,7 @@
             ]
         },
         "patches": {},
+        "composer-exit-on-patch-failure": true,
         "enable-patching": true
     }
 }
