--- a/config/default/core.entity_view_display.commerce_order_item.default.default.yml
+++ b/config/default/core.entity_view_display.commerce_order_item.default.default.yml
@@ -27,11 +27,10 @@ content:
       timezone: ''
     third_party_settings: {  }
   purchased_entity:
-    type: entity_reference_entity_view
+    type: entity_reference_label
     weight: 0
     settings:
-      view_mode: default
-      link: false
+      link: true
     third_party_settings: {  }
     label: above
     region: content
