--- a/config/default/views.view.commerce_cart_form.yml
+++ b/config/default/views.view.commerce_cart_form.yml
@@ -133,7 +133,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_view
           settings:
-            view_mode: cart
+            view_mode: summary
           group_column: target_id
           group_columns: {  }
           group_rows: true
