--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "drupal/core-recommended": "^9.1",
         "drupal/price_difference_formatter": "^1.2",
         "drush/drush": "^10.2",
-        "lemberg/draft-environment": "3.x.x-dev",
+        "lemberg/draft-environment": "^3.3.0",
         "zaporylie/composer-drupal-optimizations": "^1.1"
     },
     "repositories": [
