--- a/config/default/core.entity_view_display.commerce_product_variation.default.default.yml
+++ b/config/default/core.entity_view_display.commerce_product_variation.default.default.yml
@@ -35,6 +35,7 @@ content:
       strip_trailing_zeroes: false
     third_party_settings: {  }
 hidden:
+  langcode: true
   product_id: true
   sku: true
   title: true
