--- a/config/default/core.entity_view_display.commerce_store.online.default.yml
+++ b/config/default/core.entity_view_display.commerce_store.online.default.yml
@@ -24,6 +24,7 @@ hidden:
   billing_countries: true
   default_currency: true
   is_default: true
+  langcode: true
   mail: true
   name: true
   prices_include_tax: true
