--- a/config/default/core.entity_form_display.commerce_store.online.default.yml
+++ b/config/default/core.entity_form_display.commerce_store.online.default.yml
@@ -39,6 +39,13 @@ content:
     weight: 9
     region: content
     third_party_settings: {  }
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
   mail:
     type: email_default
     weight: 1
