--- a/config/default/core.entity_view_display.commerce_product_variation.default.summary.yml
+++ b/config/default/core.entity_view_display.commerce_product_variation.default.summary.yml
@@ -35,6 +35,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  langcode: true
   price: true
   product_id: true
   sku: true
