--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -42,6 +42,7 @@ module:
   history: 0
   image: 0
   inline_entity_form: 0
+  language: 0
   link: 0
   media: 0
   media_library: 0
@@ -56,6 +57,7 @@ module:
   quickedit: 0
   rdf: 0
   search: 0
+  serialization: 0
   shortcut: 0
   state_machine: 0
   syslog: 0
