--- a/config/default/core.entity_view_display.commerce_product.default.default.yml
+++ b/config/default/core.entity_view_display.commerce_product.default.default.yml
@@ -5,14 +5,9 @@ dependencies:
   config:
     - commerce_product.commerce_product_type.default
     - field.field.commerce_product.default.body
-    - field.field.commerce_product.default.field_image
-    - image.style.medium
   module:
     - commerce_product
-    - media
     - text
-_core:
-  default_config_hash: 10qgl6V_HwkrJufzsNCV75OpqOeMzzKDJb3BhaogmzQ
 id: commerce_product.default.default
 targetEntityType: commerce_product
 bundle: default
@@ -20,38 +15,32 @@ mode: default
 content:
   body:
     type: text_default
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  field_image:
-    type: media_thumbnail
     weight: 0
     label: hidden
-    settings:
-      image_style: medium
-      image_link: ''
+    settings: {  }
     third_party_settings: {  }
     region: content
   title:
     label: hidden
     type: string
-    weight: 1
+    weight: -5
     region: content
     settings:
       link_to_entity: false
     third_party_settings: {  }
   variations:
     type: commerce_add_to_cart
-    weight: 3
+    weight: 1
     label: hidden
     settings:
+      default_quantity: '1'
       combine: true
+      show_quantity: false
     third_party_settings: {  }
     region: content
 hidden:
   created: true
+  field_image: true
   langcode: true
   stores: true
   uid: true
