Fix composer script

--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
         "build": [
             "composer install",
             "drush si -y",
-            "drush config-set \"system.site\" uuid 902d1300-7276-46f1-8608-7fc30b57e39a",
+            "drush config-set \"system.site\" uuid 902d1300-7276-46f1-8608-7fc30b57e39a -y",
             "drush entity:delete shortcut_set",
             "drush cr",
             "drush cim -y",
